# RNode-linux

./: CMakeLists.txt  README.md  rnode.yaml
src/: CMakeLists.txt  config.c  config.h  csma.c  csma.h  kiss.c  kiss.h  main.c  queue.c  queue.h  rnode.c  rnode.h  tcp.c  tcp.h  util.c  util.h
sx126x/: CMakeLists.txt  gpio_hal.h  gpio_hal_v1.c  gpio_hal_v2.c  sx126x.c  sx126x.h
